# scikit-genome

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  release.yml  test.yml
doc/examples/dataset/: README.rst  foo_example.py
doc/source/: conf.py  index.rst
docs/source/: conf.py
skgenome/: __init__.py
skgenome/data/: __init__.py
skgenome/data/gff3/: __init__.py  _human.py
skgenome/io/fasta/: __init__.py  _parse.py  _read.py  _read_fasta.py
skgenome/io/fastq/: __init__.py  _parse.py  _read.py  _read_fastq.py
skgenome/io/gff/: _read_gff3.py
skgenome/io/gff3/: __init__.py
skgenome/io/sam/: __init__.py  _read_sam.py  grammar.lark
skgenome/io/vcf/: __init__.py  _read_vcf.py  grammar.lark
src/: lib.rs  reader.rs
src/fasta/: buffer_policy.rs  buffer_position.rs  error.rs  mod.rs  owned_record.rs  parser.rs  position.rs  record.rs  ref_record.rs  sequence.rs  sequence_iterator.rs  set.rs
src/io/fasta/: buffer_policy.rs  buffer_position.rs  error.rs  mod.rs  reader.rs  sequence.rs
tests/: conftest.py
tests/io/fasta/: test_parse.py  test_read.py  test_read_fasta.py
tests/io/fastq/: test_read_fastq.py
tests/io/gff/: test_read.py  test_read_gff.py
tests/io/sam/: test_parse.py  test_read_sam.py
tests/io/vcf/: test_read_vcf.py
tests/resources/: example.fasta  example.gff  example.sam
